--- a/index.html
+++ b/index.html
@@ -45,15 +45,12 @@
                 <img src="./img/snow/snow.jpg" class=" imgs-2 border border-2 border-success" alt="1">
 
                 <div class="carousel-caption d-none d-md-block">
-                    <h5 class="q&a">One can see snow during 6 months per year!</h5>
+                    <h5 class="q&a"> 6 months during a year!</h5>
                 </div>
             </div>
             <div class="carousel-item text-center  my-1">
                 <img src="./img/snow/snow_with_sis.jpg" class=" imgs-2 border border-2 border-success" alt="1">
                 <img src="./img/snow/snow_under_star.jpg" class=" imgs-2 border border-2 border-success" alt="1">
-                <div class="carousel-caption d-none d-md-block">
-                    <h5 class="q&a">One can see snow during 6 months per year!</h5>
-                </div>
             </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#snow" data-bs-slide="prev">
@@ -149,22 +146,6 @@
                 <img src="./img/laughing/laugh1.jpg" class=" imgs-2  border border-2 border-success" alt="1">
                 <div class="carousel-caption d-none d-md-block">
                     <h5 class="q&a">Laughing!</h5>
-                </div>
-            </div>
-            <div class="carousel-item text-center my-1 ">
-                <img src="./img/thinking/think1.jpg" class=" imgs-2 border border-2 border-success" alt="1">
-                <img src="./img/thinking/think2.jpg" class=" imgs-2  border border-2 border-success" alt="1">
-                <div class="carousel-caption d-none d-md-block">
-                    <h5 class="q&a">Thinking</h5>
-                </div>
-            </div>
-            <div class="carousel-item text-center my-1 ">
-                <img src="./img/fishing.jpg" class=" imgs-2 border border-2 border-success" alt="1">
-                <img src="./img/building/first_making.jpg"
-                     class=" model position-absolute  border border-2 border-success" alt="1">
-                <img src="./img/drawing.jpg" class=" imgs-2  border border-2 border-success" alt="1">
-                <div class="carousel-caption d-none d-md-block">
-                    <h5 class="q&a">Fishing, drawing and modeling</h5>
                 </div>
             </div>
         </div>
